objects/Event_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birthday</fullName>
                </value>
                <value>
                    <fullName>Outing</fullName>
                </value>
                <value>
                    <fullName>Party</fullName>
                </value>
                <value>
                    <fullName>Trip</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>heaven</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Goa</fullName>
                </value>
                <value>
                    <fullName>Hyd</fullName>
                </value>
                <value>
                    <fullName>Blr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Venue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Bookings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Bookings</pluralLabel>
    <recordTypes>
        <fullName>test1</fullName>
        <active>true</active>
        <label>test1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>